--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,6 +15,8 @@ exec-once=fcitx5 -D
 # My Custom Start Page (Bento)
 exec-once=~/.config/hypr/scripts/startpage.sh
 
+exec-once = hyprpm reload -n
+
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # Bluetooth
@@ -123,6 +125,13 @@ misc {
 
 binds {
     workspace_back_and_forth=true
+}
+
+plugin {
+  overview {
+    showSpecialWorkspace = true
+    exitOnSwitch = false
+  }
 }
 
 # Float Necessary Windows
@@ -250,6 +259,8 @@ bind=SUPERSHIFT,8,movetoworkspacesilent,8
 bind=SUPERSHIFT,9,movetoworkspacesilent,9
 bind=SUPERSHIFT,0,movetoworkspacesilent,10
 
-workspace = special:term, persistent:true, on-created-empty:kitty
+# workspace = special:term, persistent:true, on-created-empty:kitty
 bind=,F12,workspace,name:term
 bind=SUPER,F12,movetoworkspacesilent,name:term
+
+bind=SUPER, O, overview:toggle
