--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,5 @@
 env = QT_QPA_PLATFORMTHEME, wayland
+env = XDG_MENU_PREFIX,plasma-
 
 # You have to change this based on your monitor 
 monitor=eDP-1,1920x1080@60,0x0,1
@@ -144,6 +145,7 @@ windowrule=tile,title:^(kitty)$
 windowrule=float,title:^(fly_is_kitty)$
 windowrule=animation popin,Rofi
 
+windowrulev2 = float,title:^(.*)(Bitwarden)(.*)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
 windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
