--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -16,43 +16,31 @@ background {
 
 label {
     monitor =
-    text = Welcome back, $USER
-    text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 30
-    font_family = Noto Sans
-    rotate = 0 # degrees, counter-clockwise
-
-    position = 0, 200
-    halign = center
-    valign = center
-}
-
-label {
-    monitor =
-    text = cmd[update:1] 
-    text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 30
-    font_family = Noto Sans
-    rotate = 0 # degrees, counter-clockwise
-
-    position = 0, 200
-    halign = center
-    valign = center
-}
-
-label {
-    monitor =
     text = $TIME
-    text_align = right
-    color = rgba(200, 200, 200, 0.7)
+    text_align = center # center/right or any value for default left. multi-line text alignment inside label container
+    color = rgba(200, 200, 200, 1.0)
+    font_size = 70
+    font_family = Noto Sans
+    rotate = 0 # degrees, counter-clockwise
+
+    position = 0, 300
+    halign = center
+    valign = center
+}
+
+label {
+    monitor =
+    text = cmd[update:60000] /home/nono/.config/hypr/scripts/quote/quote
+    # text = cmd[update:0] printf "hello\nworld"
+    text_align = right # center/right or any value for default left. multi-line text alignment inside label container
+    color = rgba(200, 200, 200, 1.0)
     font_size = 25
     font_family = Noto Sans
+    rotate = 0 # degrees, counter-clockwise
 
-    position = -20, -20
-    halign = right
-    valign = top
+    position = 0, 130
+    halign = center
+    valign = center
 }
 
 input-field {
@@ -64,7 +52,7 @@ input-field {
     dots_center = false
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
     outer_color = rgb(151515)
-    inner_color = rgba(200, 200, 200)
+    inner_color = rgb(200, 200, 200)
     font_color = rgb(10, 10, 10)
     fade_on_empty = true
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
