--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@ exec-once=~/.config/waybar/scripts/launch-waybar.sh
 # Notification 
 exec-once=dunst
 # Wallpaper
-exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/space.png -m fill
+exec-once = hyprpaper
 # For screen sharing 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # For keyboard 
