Update config second monitor

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -30,7 +30,7 @@ label {
 
 label {
     monitor =
-    text = cmd[update:60000] /home/nono/.config/hypr/scripts/quote/quote
+    text = cmd[update:30000] echo $(quote -f "{S}\n- {A}\t")
     # text = cmd[update:0] printf "hello\nworld"
     text_align = right # center/right or any value for default left. multi-line text alignment inside label container
     color = rgba(200, 200, 200, 1.0)
