--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,36 +2,25 @@ env = QT_QPA_PLATFORMTHEME, wayland
 env = XDG_MENU_PREFIX,plasma-
 
 # You have to change this based on your monitor 
-monitor=eDP-1,1920x1080@60,0x0,1
-# Status bar :) 
+monitor=DP-3,2560x1440@165,1080x500,1
+# monitor=DP-3,3840x2160@60,1080x500,1.5
+monitor=HDMI-A-1,1920x1080@60,0x0,1,transform,3
+
 exec-once=~/.config/waybar/scripts/launch-waybar.sh
-# Notification 
 exec-once=dunst
-# Wallpaper
-exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/space.png -m fill
-# For screen sharing 
+exec-once=hyprpaper
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# For keyboard 
 exec-once=fcitx5 -D
-# My Custom Start Page (Bento)
-exec-once=~/.config/hypr/scripts/startpage.sh
-
-exec-once = hyprpm reload -n
-
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
-
-# Bluetooth
+exec-once=hyprpm reload -n
+exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=blueman-applet # Make sure you have installed blueman + blueman-utils
-
-# Screen Sharing 
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=~/.config/hypr/scripts/screensharing.sh
 
 input {
   # Remap Capslock -> Esc for Vim users
-  kb_layout = us,fr
-  kb_options=caps:escape
-  kb_options = compose:ralt
+  kb_layout = us_qwerty-fr
+  # kb_options=caps:escape
   repeat_rate=50
   repeat_delay=240
   follow_mouse=2
@@ -60,7 +49,8 @@ general {
     # col.active_border=0xff5e81ac
     # col.inactive_border=0x66333333
 
-    col.active_border = rgba(ffa10066) rgba(ff2a00ee) 45deg
+    col.active_border = rgba(5798C4ff) rgba(DE006366) 45deg
+    # col.active_border = rgba(ffa10066) rgba(ff2a00ee) 45deg
     # col.active_border = rgba(ff2a0066) rgba(C27154ee) 45deg
     col.inactive_border = rgba(00000000)
 
@@ -121,7 +111,7 @@ misc {
   disable_splash_rendering=true
   mouse_move_enables_dpms=true
   vfr = true
-  hide_cursor_on_touch = true
+  # hide_cursor_on_touch = true
 }
 
 binds {
@@ -130,7 +120,7 @@ binds {
 
 plugin {
   overview {
-    showSpecialWorkspace = true
+    showSpecialWorkspace = false
     exitOnSwitch = false
   }
 }
@@ -146,6 +136,7 @@ windowrule=float,title:^(fly_is_kitty)$
 windowrule=animation popin,Rofi
 
 windowrulev2 = float,title:^(.*)(Bitwarden)(.*)$
+windowrulev2 = float,title:^(.*)(Qalculate!)(.*)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
 windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
@@ -239,6 +230,17 @@ bind=SUPERSHIFT,right,movewindow,r
 bind=SUPERSHIFT,up,movewindow,u
 bind=SUPERSHIFT,down,movewindow,d
 
+workspace=1,monitor:DP-3
+workspace=2,monitor:DP-3
+workspace=3,monitor:DP-3
+workspace=4,monitor:DP-3
+workspace=5,monitor:DP-3
+workspace=6,monitor:HDMI-A-1
+workspace=7,monitor:HDMI-A-1
+workspace=8,monitor:HDMI-A-1
+workspace=9,monitor:HDMI-A-1
+workspace=10,monitor:HDMI-A-1
+
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
@@ -265,4 +267,4 @@ bind=SUPERSHIFT,0,movetoworkspacesilent,10
 bind=,F12,workspace,name:term
 bind=SUPER,F12,movetoworkspacesilent,name:term
 
-bind=SUPER, O, overview:toggle
+# bind=SUPER, O, overview:toggle
