Add thunar file progress window rule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -140,6 +140,7 @@ windowrulev2 = float,title:^(.*)(Qalculate!)(.*)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
 windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
+windowrulev2 = float,title:^(File Operation Progress)$
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(org.twosheds.iwgtk)$
 windowrulev2 = float,class:^(blueberry.py)$
