add starship config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,12 +1,21 @@
-env = QT_QPA_PLATFORMTHEME, wayland
+# env = QT_QPA_PLATFORM, wayland
+# env = XDG_CURRENT_DESKTOP, wayland
+# env = QT_QPA_PLATFORMTHEME, wayland
 env = XDG_MENU_PREFIX,plasma-
 
+# env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORM,xcb
+env = QT_QPA_PLATFORMTHEME,qt5ct
+# env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_STYLE_OVERRIDE,kvantum 
+
 # You have to change this based on your monitor 
-monitor=DP-3,2560x1440@165,1080x500,1
+monitor=DP-3,2560x1440@165,1080x480,1
 # monitor=DP-3,3840x2160@60,1080x500,1.5
 monitor=HDMI-A-1,1920x1080@60,0x0,1,transform,3
 
-exec-once=~/.config/waybar/scripts/launch-waybar.sh
 exec-once=dunst
 exec-once=hyprpaper
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -16,6 +25,10 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=blueman-applet # Make sure you have installed blueman + blueman-utils
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=~/.config/hypr/scripts/screensharing.sh
+exec-once=~/.config/waybar/scripts/launch-waybar.sh > /tmp/waybar
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+exec-once = flameshot
 
 input {
   # Remap Capslock -> Esc for Vim users
@@ -41,7 +54,7 @@ gestures {
 
 general {
     layout=dwindle
-    sensitivity=1.0 # for mouse cursor
+    # sensitivity=1.0 # for mouse cursor
 
     gaps_in=5
     gaps_out=10
@@ -54,7 +67,7 @@ general {
     # col.active_border = rgba(ff2a0066) rgba(C27154ee) 45deg
     col.inactive_border = rgba(00000000)
 
-    apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
+    # apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 }
 
 decoration {
@@ -74,8 +87,8 @@ decoration {
         # if you want heavy blur, you need to up the passes.
         # the more passes, the more you can up the size without noticing artifacts.
     }
-    drop_shadow=true
-    shadow_range=15
+    # drop_shadow=true
+    # shadow_range=15
     # col.shadow=0x7899d4ff
     # col.shadow=0xffa7caff #86AAEC
     # col.shadow_inactive=0x50000000
@@ -98,12 +111,12 @@ animations {
 dwindle {
     pseudotile=1 # enable pseudotiling on dwindle
     force_split=0
-    no_gaps_when_only = false
+    # no_gaps_when_only = false
 }
 
 master {
   new_on_top=true
-  no_gaps_when_only = false
+  # no_gaps_when_only = false
 }
 
 misc {
@@ -150,6 +163,7 @@ windowrulev2 = tile,class:^(neovide)$
 
 # Increase the opacity 
 windowrule=opacity 0.92,Thunar
+windowrule=opacity 0.85,title:.*- Thunar.*
 windowrule=opacity 0.96,discord
 windowrule=opacity 0.9,VSCodium
 windowrule=opacity 0.88,obsidian
@@ -167,7 +181,7 @@ bind=SUPER,F,fullscreen,1
 bind=SUPERSHIFT,F,fullscreen,0
 
 bind=SUPERSHIFT,t,exec,kitty --start-as=fullscreen -o 'font_size=20' --title all_is_kitty
-bind=ALT,RETURN,exec,kitty --title fly_is_kitty
+# bind=ALT,RETURN,exec,kitty --title fly_is_kitty
 bind=SUPER,RETURN,exec,kitty --title kitty_term
 
 bind=SUPER,C,killactive,
@@ -178,6 +192,7 @@ bind=SUPER,S,exec, rofi -show ssh -terminal kitty
 bind=SUPER,W,exec, rofi -show window
 bind=SUPER,P,pseudo,
 bind=SUPER,ESCAPE,exec,sudo systemctl suspend
+bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 bind=,XF86AudioMute,exec,~/.config/hypr/scripts/volume mute
 bind=,XF86AudioLowerVolume,exec,~/.config/hypr/scripts/volume down
@@ -193,6 +208,7 @@ bind = SUPER, T, togglefloating,
 bind=SUPER, G, togglegroup
 bind=SUPERSHIFT, G, lockactivegroup, toggle
 bind=SUPER, Tab, changegroupactive
+bind=SUPERSHIFT, W, exec, wally
 
 group {
     groupbar {
@@ -205,7 +221,7 @@ group {
 }
 
 # Screen shot 
-bind=SUPERSHIFT,S,exec,grim -g "$(slurp)" - | swappy -f -
+bind=SUPERSHIFT,S,exec,flameshot gui
 # Screen recorder
 bind=SUPERSHIFT,R,exec,wf-recorder -g "$(slurp)"
 # Emoji selector 
@@ -269,3 +285,25 @@ bind=,F12,workspace,name:term
 bind=SUPER,F12,movetoworkspacesilent,name:term
 
 # bind=SUPER, O, overview:toggle
+
+windowrule=monitor 1,flameshot
+windowrule=fullscreenstate,flameshot
+windowrule=float,flameshot
+windowrule=move 0 0,flameshot
+
+# exec = gsettings set org.gnome.desktop.interface gtk-theme "Layan-Dark"
+# exec = gsettings set org.gnome.desktop.wm.preferences theme "Layan-Dark"
+
+# exec = gsettings set org.gnome.desktop.interface gtk-theme "Otis"
+# exec = gsettings set org.gnome.desktop.wm.preferences theme "Otis"
+
+# exec = gsettings set org.gnome.desktop.interface gtk-theme "Yaru-Orange-dark"
+# exec = gsettings set org.gnome.desktop.wm.preferences theme "Yaru-Orange-dark"
+# exec = gsettings set org.gnome.desktop.interface icon-theme "Yaru-Orange"
+
+# exec = gsettings set org.gnome.desktop.interface icon-theme "Ketsa-icons"
+
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Skeuos-Teal-Dark"
+exec = gsettings set org.gnome.desktop.wm.preferences theme "Skeuos-Teal-Dark"
+exec = gsettings set org.gnome.desktop.interface icon-theme "BeautySolar"
