--- a/starship.toml
+++ b/starship.toml
@@ -3,6 +3,7 @@
 
 add_newline = true
 continuation_prompt = "[▸▹ ](dimmed white)"
+command_timeout = 1000
 
 format = """$os\
 $sudo\
@@ -119,7 +120,7 @@ truncation_length = 0
 use_os_path_sep = true
 style = " #0087AF"
 repo_root_style = 'bold #00AFFF'
-repo_root_format = "[$before_root_path]($before_repo_root_style)[ $repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style) "
+repo_root_format = "[$before_root_path]($before_repo_root_style)[󰊢 $repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style) "
 
 [cmd_duration]
 format = " [ $duration](dimmed white)"
@@ -216,8 +217,7 @@ symbol = " "
 version_format = "${raw}"
 
 [conda]
-format = " [$symbol($version)]($style)"
-symbol = " "
+format = " [$symbol$environment]($style)"
 
 [dart]
 symbol = " "
